# kaggle-house-prices

./: README.md  pyproject.toml  requirements.txt  shell.nix
data/: .gitignore  data_description.txt.dvc
